--- a/install.txt
+++ b/install.txt
@@ -1,17 +1,12 @@
-brew install --cask oracle-jdk
-
-brew install java
-brew info java
+brew install java                               # install Java community version
+brew info java                                  # recommend the path settings to add Java to OS runtime, i.e. recommend the below path
 sudo ln -sfn /usr/local/opt/openjdk/libexec/openjdk.jdk /Library/Java/JavaVirtualMachines/openjdk.jdk
 
-brew install openjdk@11
-brew info java
+
+brew install openjdk@11                         # install specific version of Java community versions
+brew info java                                  # recommend the path settings to add Java to OS runtime, i.e. recommend the below path
 sudo ln -sfn /usr/local/opt/openjdk@11/libexec/openjdk.jdk /Library/Java/JavaVirtualMachines/openjdk-11.jdk
 
-java -version
+java -version                                   # display the installed Java version
 
-
-
-
-javac -d target/ src/*java src/osone/*java
-cd target && java osone/Controller && cd ..
+brew install --cask oracle-jdk                  # install Java oracle version
